--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <body>
 
-<button id="boton-scan">📷 ESCANEAR QR</button>
+<button id="boton-scan">📷 ESCANEAR QR1</button>
 
 <div id="reader"></div>
 
@@ -113,3 +113,4 @@
 
 </body>
 </html>
+
